K8S/commands-noteport-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: commandsnoteportsrv
spec:
  type: NodePort
  selector:
    app: commandsservice
  ports:
    - name: commandsservice
      protocol: TCP
      port: 9009
      targetPort: 9090
      nodePort: 30090
