K8S/platforms-noteport-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformnoteportsrv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 8008
      targetPort: 8080
      nodePort: 30080
